--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: Rookie's blog
 subtitle: 上善若水，皆因以谦为心
-welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
+welcome_message: <a href="https://github.com/HehuanAndroid" target="_blank">欢迎来小站做客</a>
 description: Hi,你好,我是Rookie,一名小小的见习魔法师,目前还在魔法学校学习,致力于基础魔法的研究和应用,努力成为一名优秀的魔法师.
 creator: <a href="http://onev.cat">@onevcat</a>
 
@@ -32,7 +32,7 @@ paginate_path: "page/:num/"
 
 # Comment
 comment:
-    disqus: vno-jekyll
+    disqus: Rookie
     # duoshuo: 
     
 # Social
